Name:                gherkin
Version:             0.1
Synopsis:            Gherkin parser in haskell
License:             BSD3
License-file:        LICENSE
Author:              Sakari Jokinen
Maintainer:          sakariij@gmail.com
Category:            Parser
Build-type:          Simple
Cabal-version:       >=1.10

test-suite test
  default-language: Haskell2010
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  ghc-options: -threaded -rtsopts
  build-depends:
    base >= 4,
    test-framework,
    test-framework-quickcheck2,
    QuickCheck >= 2.4.0.0,
    parsec >= 3.1.1,
    gherkin >= 0.1,
    MissingH >= 1.1.0.3

Library
  default-language: Haskell2010
  exposed-modules: 
    Language.Gherkin, 
    Language.Gherkin.AST,
    Language.Gherkin.Parser       
  build-depends:
    base >= 4,
    parsec >= 3.1.1
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  