Name:                gherkin
Description:	     A parser and pretty printer for Gherkin.
Version:             0.1
Synopsis:            Gherkin parser in haskell
License:             BSD3
License-file:        LICENSE
Author:              Sakari Jokinen
Maintainer:          sakariij@gmail.com
Category:            Parser
Build-type:          Simple
Cabal-version:       >=1.10

test-suite test
  default-language: Haskell2010
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  ghc-options: -threaded -rtsopts -Wall -fno-warn-orphans
  build-depends:
    syb >= 0.3.6,
    base >= 4.5.0,
    test-framework,
    test-framework-quickcheck2,
    QuickCheck >= 2.4.0.0,
    parsec >= 3.1.1,
    gherkin >= 0.1,
    pretty >= 1.0.2.1,
    MissingH >= 1.1.0.3

source-repository head
  type: git
  location: git://github.com/sakari/haskell-gherkin.git

source-repository this
  type: git
  location: git://github.com/sakari/haskell-gherkin.git
  tag: 0.1

Library
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Language.Gherkin,
    Language.Gherkin.AST,
    Language.Gherkin.Parser,
    Language.Gherkin.Pretty
  build-depends:
    base >= 4,
    parsec >= 3.1.1,
    pretty >= 1.0.2.1
